c/engine.h


typedef struct LiteRtLmEngine LiteRtLmEngine;
typedef struct LiteRtLmSession LiteRtLmSession;
typedef struct LiteRtLmResponses LiteRtLmResponses;
typedef struct LiteRtLmBenchmarkInfo LiteRtLmBenchmarkInfo;
typedef struct LiteRtLmConversation LiteRtLmConversation;
typedef struct LiteRtLmConversationOptionalArgs
    LiteRtLmConversationOptionalArgs;
typedef struct LiteRtLmRepetitionPenaltyConfig LiteRtLmRepetitionPenaltyConfig;
typedef struct LiteRtLmNoRepeatNgramConfig LiteRtLmNoRepeatNgramConfig;
typedef struct LiteRtLmSuppressTokensConfig LiteRtLmSuppressTokensConfig;
typedef struct LiteRtLmThinkingConfig LiteRtLmThinkingConfig;
typedef struct LiteRtLmJsonResponse LiteRtLmJsonResponse;
typedef struct LiteRtLmDetokenizeResult LiteRtLmDetokenizeResult;
typedef struct LiteRtLmTokenizeResult LiteRtLmTokenizeResult;
typedef enum {
  kLiteRtLmTokenUnionTypeString = 0,
  kLiteRtLmTokenUnionTypeIds = 1,
} LiteRtLmTokenUnionType;
typedef struct LiteRtLmTokenUnion LiteRtLmTokenUnion;
typedef struct LiteRtLmTokenUnions LiteRtLmTokenUnions;
typedef struct LiteRtLmConversationConfig LiteRtLmConversationConfig;
typedef enum {
  kLiteRtLmConstraintTypeNone = 0,
  kLiteRtLmConstraintTypeRegex = 1,
  kLiteRtLmConstraintTypeJsonSchema = 2,
} LiteRtLmConstraintType;
LITERT_LM_C_API_EXPORT
LiteRtLmThinkingConfig* litert_lm_thinking_config_create();
LITERT_LM_C_API_EXPORT
void litert_lm_thinking_config_delete(LiteRtLmThinkingConfig* config);
LITERT_LM_C_API_EXPORT
void litert_lm_thinking_config_set_enable_thinking(
    LiteRtLmThinkingConfig* config, bool enable_thinking);
LITERT_LM_C_API_EXPORT
void litert_lm_thinking_config_set_thinking_token_budget(
    LiteRtLmThinkingConfig* config, int thinking_token_budget);
LITERT_LM_C_API_EXPORT
LiteRtLmNoRepeatNgramConfig* litert_lm_no_repeat_ngram_config_create();
LITERT_LM_C_API_EXPORT
void litert_lm_no_repeat_ngram_config_delete(
    LiteRtLmNoRepeatNgramConfig* config);
LITERT_LM_C_API_EXPORT
void litert_lm_no_repeat_ngram_config_set_no_repeat_ngram_size(
    LiteRtLmNoRepeatNgramConfig* config, int no_repeat_ngram_size);
LITERT_LM_C_API_EXPORT
void litert_lm_no_repeat_ngram_config_set_window_size(
    LiteRtLmNoRepeatNgramConfig* config, int window_size);
LITERT_LM_C_API_EXPORT
LiteRtLmSuppressTokensConfig* litert_lm_suppress_tokens_config_create();
LITERT_LM_C_API_EXPORT
void litert_lm_suppress_tokens_config_delete(
    LiteRtLmSuppressTokensConfig* config);
LITERT_LM_C_API_EXPORT
void litert_lm_suppress_tokens_config_set_suppress_tokens(
    LiteRtLmSuppressTokensConfig* config, const int* suppress_tokens,
    size_t num_tokens);
LITERT_LM_C_API_EXPORT
LiteRtLmConversationOptionalArgs* litert_lm_conversation_optional_args_create();
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_optional_args_delete(
    LiteRtLmConversationOptionalArgs* optional_args);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_optional_args_set_repetition_penalty_config(
    LiteRtLmConversationOptionalArgs* optional_args,
    const LiteRtLmRepetitionPenaltyConfig* repetition_penalty_config);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_optional_args_set_no_repeat_ngram_config(
    LiteRtLmConversationOptionalArgs* optional_args,
    const LiteRtLmNoRepeatNgramConfig* no_repeat_ngram_config);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_optional_args_set_suppress_tokens_config(
    LiteRtLmConversationOptionalArgs* optional_args,
    const LiteRtLmSuppressTokensConfig* suppress_tokens_config);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_optional_args_set_max_output_tokens(
    LiteRtLmConversationOptionalArgs* optional_args, int max_output_tokens);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_optional_args_set_thinking_config(
    LiteRtLmConversationOptionalArgs* optional_args,
    const LiteRtLmThinkingConfig* thinking_config);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_optional_args_set_constraint(
    LiteRtLmConversationOptionalArgs* optional_args,
    LiteRtLmConstraintType constraint_type, const char* constraint_string);
typedef enum {
  kLiteRtLmLogSeverityVerbose = 0,
  kLiteRtLmLogSeverityDebug = 1,
  kLiteRtLmLogSeverityInfo = 2,
  kLiteRtLmLogSeverityWarning = 3,
  kLiteRtLmLogSeverityError = 4,
  kLiteRtLmLogSeverityFatal = 5,
  kLiteRtLmLogSeveritySilent = 1000,
} LiteRtLmLogSeverity;
LITERT_LM_C_API_EXPORT
void litert_lm_set_min_log_level(LiteRtLmLogSeverity level);
LITERT_LM_C_API_EXPORT
void litert_lm_responses_delete(LiteRtLmResponses* responses);
LITERT_LM_C_API_EXPORT
int litert_lm_responses_get_num_candidates(const LiteRtLmResponses* responses);
LITERT_LM_C_API_EXPORT
const char* litert_lm_responses_get_response_text_at(
    const LiteRtLmResponses* responses, int index);
LITERT_LM_C_API_EXPORT
bool litert_lm_responses_has_score_at(const LiteRtLmResponses* responses,
                                      int index);
LITERT_LM_C_API_EXPORT
float litert_lm_responses_get_score_at(const LiteRtLmResponses* responses,
                                       int index);
LITERT_LM_C_API_EXPORT
bool litert_lm_responses_has_token_length_at(const LiteRtLmResponses* responses,
                                             int index);
LITERT_LM_C_API_EXPORT
int litert_lm_responses_get_token_length_at(const LiteRtLmResponses* responses,
                                            int index);
LITERT_LM_C_API_EXPORT
bool litert_lm_responses_has_token_scores_at(const LiteRtLmResponses* responses,
                                             int index);
LITERT_LM_C_API_EXPORT
int litert_lm_responses_get_num_token_scores_at(
    const LiteRtLmResponses* responses, int index);
LITERT_LM_C_API_EXPORT
const float* litert_lm_responses_get_token_scores_at(
    const LiteRtLmResponses* responses, int index);
LITERT_LM_C_API_EXPORT
LiteRtLmBenchmarkInfo* litert_lm_session_get_benchmark_info(
    LiteRtLmSession* session);
LITERT_LM_C_API_EXPORT
void litert_lm_benchmark_info_delete(LiteRtLmBenchmarkInfo* benchmark_info);
LITERT_LM_C_API_EXPORT
double litert_lm_benchmark_info_get_time_to_first_token(
    const LiteRtLmBenchmarkInfo* benchmark_info);
LITERT_LM_C_API_EXPORT
double litert_lm_benchmark_info_get_total_init_time_in_second(
    const LiteRtLmBenchmarkInfo* benchmark_info);
LITERT_LM_C_API_EXPORT
int litert_lm_benchmark_info_get_num_prefill_turns(
    const LiteRtLmBenchmarkInfo* benchmark_info);
LITERT_LM_C_API_EXPORT
int litert_lm_benchmark_info_get_num_decode_turns(
    const LiteRtLmBenchmarkInfo* benchmark_info);
LITERT_LM_C_API_EXPORT
int litert_lm_benchmark_info_get_prefill_token_count_at(
    const LiteRtLmBenchmarkInfo* benchmark_info, int index);
LITERT_LM_C_API_EXPORT
int litert_lm_benchmark_info_get_decode_token_count_at(
    const LiteRtLmBenchmarkInfo* benchmark_info, int index);
LITERT_LM_C_API_EXPORT
double litert_lm_benchmark_info_get_prefill_tokens_per_sec_at(
    const LiteRtLmBenchmarkInfo* benchmark_info, int index);
LITERT_LM_C_API_EXPORT
double litert_lm_benchmark_info_get_decode_tokens_per_sec_at(
    const LiteRtLmBenchmarkInfo* benchmark_info, int index);
typedef struct LiteRtLmStreamChunk LiteRtLmStreamChunk;
LITERT_LM_C_API_EXPORT
const char* litert_lm_stream_chunk_get_text(const LiteRtLmStreamChunk* chunk);
LITERT_LM_C_API_EXPORT
bool litert_lm_stream_chunk_is_final(const LiteRtLmStreamChunk* chunk);
LITERT_LM_C_API_EXPORT
const char* litert_lm_stream_chunk_get_error(const LiteRtLmStreamChunk* chunk);
typedef void (*LiteRtLmStreamCallback)(void* callback_data,
                                       const LiteRtLmStreamChunk* chunk);
LITERT_LM_C_API_EXPORT
LiteRtLmConversation* litert_lm_conversation_create(
    LiteRtLmEngine* engine, LiteRtLmConversationConfig* config);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_delete(LiteRtLmConversation* conversation);
LITERT_LM_C_API_EXPORT
LiteRtLmJsonResponse* litert_lm_conversation_send_message(
    LiteRtLmConversation* conversation, const char* message_json,
    const char* extra_context,
    const LiteRtLmConversationOptionalArgs* optional_args);
LITERT_LM_C_API_EXPORT
void litert_lm_json_response_delete(LiteRtLmJsonResponse* response);
LITERT_LM_C_API_EXPORT
const char* litert_lm_json_response_get_string(
    const LiteRtLmJsonResponse* response);
LITERT_LM_C_API_EXPORT
int litert_lm_conversation_send_message_stream(
    LiteRtLmConversation* conversation, const char* message_json,
    const char* extra_context,
    const LiteRtLmConversationOptionalArgs* optional_args,
    LiteRtLmStreamCallback callback, void* callback_data);
LITERT_LM_C_API_EXPORT
const char* litert_lm_conversation_render_message_to_string(
    LiteRtLmConversation* conversation, const char* message_json);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_cancel_process(LiteRtLmConversation* conversation);
LITERT_LM_C_API_EXPORT
LiteRtLmBenchmarkInfo* litert_lm_conversation_get_benchmark_info(
    LiteRtLmConversation* conversation);
LITERT_LM_C_API_EXPORT
int litert_lm_conversation_get_token_count(LiteRtLmConversation* conversation);
LITERT_LM_C_API_EXPORT
LiteRtLmTokenizeResult* litert_lm_engine_tokenize(LiteRtLmEngine* engine,
                                                  const char* text);
LITERT_LM_C_API_EXPORT
void litert_lm_tokenize_result_delete(LiteRtLmTokenizeResult* result);
LITERT_LM_C_API_EXPORT
const int* litert_lm_tokenize_result_get_tokens(
    const LiteRtLmTokenizeResult* result);
LITERT_LM_C_API_EXPORT
size_t litert_lm_tokenize_result_get_num_tokens(
    const LiteRtLmTokenizeResult* result);
LITERT_LM_C_API_EXPORT
LiteRtLmDetokenizeResult* litert_lm_engine_detokenize(LiteRtLmEngine* engine,
                                                      const int* tokens,
                                                      size_t num_tokens);
LITERT_LM_C_API_EXPORT
void litert_lm_detokenize_result_delete(LiteRtLmDetokenizeResult* result);
LITERT_LM_C_API_EXPORT
const char* litert_lm_detokenize_result_get_string(
    const LiteRtLmDetokenizeResult* result);
LITERT_LM_C_API_EXPORT
void litert_lm_token_union_delete(LiteRtLmTokenUnion* token_union);
LITERT_LM_C_API_EXPORT
LiteRtLmTokenUnionType litert_lm_token_union_get_type(
    const LiteRtLmTokenUnion* token_union);
LITERT_LM_C_API_EXPORT
const char* litert_lm_token_union_get_string(
    const LiteRtLmTokenUnion* token_union);
LITERT_LM_C_API_EXPORT
int litert_lm_token_union_get_ids(const LiteRtLmTokenUnion* token_union,
                                  const int** out_tokens,
                                  size_t* out_num_tokens);
LITERT_LM_C_API_EXPORT
void litert_lm_token_unions_delete(LiteRtLmTokenUnions* tokens);
LITERT_LM_C_API_EXPORT
size_t litert_lm_token_unions_get_num_tokens(const LiteRtLmTokenUnions* tokens);
LITERT_LM_C_API_EXPORT
LiteRtLmTokenUnion* litert_lm_token_unions_get_token_at(
    const LiteRtLmTokenUnions* tokens, size_t index);
LITERT_LM_C_API_EXPORT
LiteRtLmTokenUnion* litert_lm_engine_get_start_token(LiteRtLmEngine* engine);
LITERT_LM_C_API_EXPORT
LiteRtLmTokenUnions* litert_lm_engine_get_stop_tokens(LiteRtLmEngine* engine);