python/litert_lm/_ffi.py


  # No Repeat Ngram Config
  lib.litert_lm_no_repeat_ngram_config_create.restype = ctypes.c_void_p
  lib.litert_lm_no_repeat_ngram_config_create.argtypes = []
  lib.litert_lm_no_repeat_ngram_config_delete.argtypes = [ctypes.c_void_p]
  lib.litert_lm_no_repeat_ngram_config_set_no_repeat_ngram_size.argtypes = [
      ctypes.c_void_p,
      ctypes.c_int,
  ]
  lib.litert_lm_no_repeat_ngram_config_set_window_size.argtypes = [
      ctypes.c_void_p,
      ctypes.c_int,
  ]

  # Suppress Tokens Config
  lib.litert_lm_suppress_tokens_config_create.restype = ctypes.c_void_p
  lib.litert_lm_suppress_tokens_config_create.argtypes = []
  lib.litert_lm_suppress_tokens_config_delete.argtypes = [ctypes.c_void_p]
  lib.litert_lm_suppress_tokens_config_set_suppress_tokens.argtypes = [
      ctypes.c_void_p,
      ctypes.POINTER(ctypes.c_int),
      ctypes.c_size_t,
  ]

  # Thinking Config
  lib.litert_lm_thinking_config_create.restype = ctypes.c_void_p
  lib.litert_lm_thinking_config_create.argtypes = []
  lib.litert_lm_thinking_config_delete.argtypes = [ctypes.c_void_p]
  lib.litert_lm_thinking_config_set_enable_thinking.argtypes = [
      ctypes.c_void_p,
      ctypes.c_bool,
  ]
  lib.litert_lm_thinking_config_set_thinking_token_budget.argtypes = [
      ctypes.c_void_p,
      ctypes.c_int,
  ]

  # Conversation Optional Args
  lib.litert_lm_conversation_optional_args_create.restype = ctypes.c_void_p
  lib.litert_lm_conversation_optional_args_create.argtypes = []
  lib.litert_lm_conversation_optional_args_delete.argtypes = [ctypes.c_void_p]
  lib.litert_lm_conversation_optional_args_set_repetition_penalty_config.argtypes = [
      ctypes.c_void_p,
      ctypes.c_void_p,
  ]
  lib.litert_lm_conversation_optional_args_set_no_repeat_ngram_config.argtypes = [
      ctypes.c_void_p,
      ctypes.c_void_p,
  ]
  lib.litert_lm_conversation_optional_args_set_suppress_tokens_config.argtypes = [
      ctypes.c_void_p,
      ctypes.c_void_p,
  ]
  lib.litert_lm_conversation_optional_args_set_max_output_tokens.argtypes = [
      ctypes.c_void_p,
      ctypes.c_int,
  ]
  lib.litert_lm_conversation_optional_args_set_thinking_config.argtypes = [
      ctypes.c_void_p,
      ctypes.c_void_p,
  ]

  # Conversation
  lib.litert_lm_conversation_create.restype = ctypes.c_void_p
  lib.litert_lm_conversation_create.argtypes = [
      ctypes.c_void_p,
      ctypes.c_void_p,
  ]
  lib.litert_lm_conversation_delete.argtypes = [ctypes.c_void_p]
  lib.litert_lm_conversation_send_message.restype = ctypes.c_void_p
  lib.litert_lm_conversation_send_message.argtypes = [
      ctypes.c_void_p,
      c_string_p,
      c_string_p,
      ctypes.c_void_p,
  ]
  lib.litert_lm_conversation_send_message_stream.restype = ctypes.c_int
  lib.litert_lm_conversation_send_message_stream.argtypes = [
      ctypes.c_void_p,
      c_string_p,
      c_string_p,
      ctypes.c_void_p,
      STREAM_CALLBACK_TYPE,
      ctypes.c_void_p,
  ]
  lib.litert_lm_conversation_cancel_process.argtypes = [ctypes.c_void_p]
  lib.litert_lm_conversation_render_message_to_string.restype = ctypes.c_char_p
  lib.litert_lm_conversation_render_message_to_string.argtypes = [
      ctypes.c_void_p,
      c_string_p,
  ]
  lib.litert_lm_conversation_get_token_count.restype = ctypes.c_int
  lib.litert_lm_conversation_get_token_count.argtypes = [ctypes.c_void_p]

  # Conversation Optional Args
  lib.litert_lm_conversation_optional_args_create.restype = ctypes.c_void_p
  lib.litert_lm_conversation_optional_args_create.argtypes = []
  lib.litert_lm_conversation_optional_args_delete.argtypes = [ctypes.c_void_p]
  lib.litert_lm_conversation_optional_args_set_constraint.argtypes = [
      ctypes.c_void_p,
      ctypes.c_int,
      c_string_p,
  ]

  # interfaces.Responses
  lib.litert_lm_responses_delete.argtypes = [ctypes.c_void_p]
  lib.litert_lm_responses_get_num_candidates.restype = ctypes.c_int
  lib.litert_lm_responses_get_num_candidates.argtypes = [ctypes.c_void_p]
  lib.litert_lm_responses_get_response_text_at.restype = ctypes.c_char_p
  lib.litert_lm_responses_get_response_text_at.argtypes = [
      ctypes.c_void_p,
      ctypes.c_int,
  ]
  lib.litert_lm_responses_has_score_at.restype = ctypes.c_bool
  lib.litert_lm_responses_has_score_at.argtypes = [
      ctypes.c_void_p,
      ctypes.c_int,
  ]
  lib.litert_lm_responses_get_score_at.restype = ctypes.c_float
  lib.litert_lm_responses_get_score_at.argtypes = [
      ctypes.c_void_p,
      ctypes.c_int,
  ]
  lib.litert_lm_responses_has_token_length_at.restype = ctypes.c_bool
  lib.litert_lm_responses_has_token_length_at.argtypes = [
      ctypes.c_void_p,
      ctypes.c_int,
  ]
  lib.litert_lm_responses_get_token_length_at.restype = ctypes.c_int
  lib.litert_lm_responses_get_token_length_at.argtypes = [
      ctypes.c_void_p,
      ctypes.c_int,
  ]
  lib.litert_lm_responses_has_token_scores_at.restype = ctypes.c_bool
  lib.litert_lm_responses_has_token_scores_at.argtypes = [
      ctypes.c_void_p,
      ctypes.c_int,
  ]
  lib.litert_lm_responses_get_num_token_scores_at.restype = ctypes.c_int
  lib.litert_lm_responses_get_num_token_scores_at.argtypes = [
      ctypes.c_void_p,
      ctypes.c_int,
  ]
  lib.litert_lm_responses_get_token_scores_at.restype = ctypes.POINTER(
      ctypes.c_float
  )
  lib.litert_lm_responses_get_token_scores_at.argtypes = [
      ctypes.c_void_p,
      ctypes.c_int,
  ]

  # JSON Response
  lib.litert_lm_json_response_delete.argtypes = [ctypes.c_void_p]
  lib.litert_lm_json_response_get_string.restype = ctypes.c_char_p
  lib.litert_lm_json_response_get_string.argtypes = [ctypes.c_void_p]

  # Benchmark Info
  lib.litert_lm_session_get_benchmark_info.restype = ctypes.c_void_p
  lib.litert_lm_session_get_benchmark_info.argtypes = [ctypes.c_void_p]
  lib.litert_lm_conversation_get_benchmark_info.restype = ctypes.c_void_p
  lib.litert_lm_conversation_get_benchmark_info.argtypes = [ctypes.c_void_p]
  lib.litert_lm_benchmark_info_delete.argtypes = [ctypes.c_void_p]
  lib.litert_lm_benchmark_info_get_time_to_first_token.restype = ctypes.c_double
  lib.litert_lm_benchmark_info_get_time_to_first_token.argtypes = [
      ctypes.c_void_p
  ]
  lib.litert_lm_benchmark_info_get_total_init_time_in_second.restype = (
      ctypes.c_double
  )
  lib.litert_lm_benchmark_info_get_total_init_time_in_second.argtypes = [
      ctypes.c_void_p
  ]
  lib.litert_lm_benchmark_info_get_num_prefill_turns.restype = ctypes.c_int
  lib.litert_lm_benchmark_info_get_num_prefill_turns.argtypes = [
      ctypes.c_void_p
  ]
  lib.litert_lm_benchmark_info_get_num_decode_turns.restype = ctypes.c_int
  lib.litert_lm_benchmark_info_get_num_decode_turns.argtypes = [ctypes.c_void_p]
  lib.litert_lm_benchmark_info_get_prefill_token_count_at.restype = ctypes.c_int
  lib.litert_lm_benchmark_info_get_prefill_token_count_at.argtypes = [
      ctypes.c_void_p,
      ctypes.c_int,
  ]
  lib.litert_lm_benchmark_info_get_decode_token_count_at.restype = ctypes.c_int
  lib.litert_lm_benchmark_info_get_decode_token_count_at.argtypes = [
      ctypes.c_void_p,
      ctypes.c_int,
  ]
  lib.litert_lm_benchmark_info_get_prefill_tokens_per_sec_at.restype = (
      ctypes.c_double
  )
  lib.litert_lm_benchmark_info_get_prefill_tokens_per_sec_at.argtypes = [
      ctypes.c_void_p,
      ctypes.c_int,
  ]
  lib.litert_lm_benchmark_info_get_decode_tokens_per_sec_at.restype = (
      ctypes.c_double
  )
  lib.litert_lm_benchmark_info_get_decode_tokens_per_sec_at.argtypes = [
      ctypes.c_void_p,
      ctypes.c_int,
  ]

  # Tokenizer
  lib.litert_lm_engine_tokenize.restype = ctypes.c_void_p
  lib.litert_lm_engine_tokenize.argtypes = [ctypes.c_void_p, c_string_p]
  lib.litert_lm_tokenize_result_delete.argtypes = [ctypes.c_void_p]
  lib.litert_lm_tokenize_result_get_tokens.restype = ctypes.POINTER(
      ctypes.c_int
  )
  lib.litert_lm_tokenize_result_get_tokens.argtypes = [ctypes.c_void_p]
  lib.litert_lm_tokenize_result_get_num_tokens.restype = ctypes.c_size_t
  lib.litert_lm_tokenize_result_get_num_tokens.argtypes = [ctypes.c_void_p]

  lib.litert_lm_engine_detokenize.restype = ctypes.c_void_p
  lib.litert_lm_engine_detokenize.argtypes = [
      ctypes.c_void_p,
      ctypes.POINTER(ctypes.c_int),
      ctypes.c_size_t,
  ]
  lib.litert_lm_detokenize_result_delete.argtypes = [ctypes.c_void_p]
  lib.litert_lm_detokenize_result_get_string.restype = ctypes.c_char_p
  lib.litert_lm_detokenize_result_get_string.argtypes = [ctypes.c_void_p]

  # Token Union / Metadata
  lib.litert_lm_token_union_delete.argtypes = [ctypes.c_void_p]
  lib.litert_lm_token_union_get_type.restype = ctypes.c_int
  lib.litert_lm_token_union_get_type.argtypes = [ctypes.c_void_p]
  lib.litert_lm_token_union_get_string.restype = ctypes.c_char_p
  lib.litert_lm_token_union_get_string.argtypes = [ctypes.c_void_p]
  lib.litert_lm_token_union_get_ids.restype = ctypes.c_int
  lib.litert_lm_token_union_get_ids.argtypes = [
      ctypes.c_void_p,
      ctypes.POINTER(ctypes.POINTER(ctypes.c_int)),
      ctypes.POINTER(ctypes.c_size_t),
  ]

  lib.litert_lm_token_unions_delete.argtypes = [ctypes.c_void_p]
  lib.litert_lm_token_unions_get_num_tokens.restype = ctypes.c_size_t
  lib.litert_lm_token_unions_get_num_tokens.argtypes = [ctypes.c_void_p]
  lib.litert_lm_token_unions_get_token_at.restype = ctypes.c_void_p
  lib.litert_lm_token_unions_get_token_at.argtypes = [
      ctypes.c_void_p,
      ctypes.c_size_t,
  ]

  lib.litert_lm_engine_get_start_token.restype = ctypes.c_void_p
  lib.litert_lm_engine_get_start_token.argtypes = [ctypes.c_void_p]
  lib.litert_lm_engine_get_stop_tokens.restype = ctypes.c_void_p
  lib.litert_lm_engine_get_stop_tokens.argtypes = [ctypes.c_void_p]

  # Stream Chunk
  lib.litert_lm_stream_chunk_get_text.restype = ctypes.c_char_p
  lib.litert_lm_stream_chunk_get_text.argtypes = [ctypes.c_void_p]
  lib.litert_lm_stream_chunk_is_final.restype = ctypes.c_bool
  lib.litert_lm_stream_chunk_is_final.argtypes = [ctypes.c_void_p]
  lib.litert_lm_stream_chunk_get_error.restype = ctypes.c_char_p
  lib.litert_lm_stream_chunk_get_error.argtypes = [ctypes.c_void_p]


def set_min_log_severity(severity: LogSeverity):
  """Sets the minimum logging severity for the C library."""
  _get_lib().litert_lm_set_min_log_level(int(severity))
